components/cards.css
.card {
  align-self: center;
  display: flex;
  max-width: 550px;
  max-height: 300px;
  padding: 30px;
  margin: 20px;
  border-radius: 9px;
  box-shadow: 2px 4px 3px rgba(10,10,10,.1);
  color: aliceblue;
  justify-content: center;
  background-color: blanchedalmond;
}

.coding-lang {
max-width: 90vw;
background-color: white;
border-radius: 9px;
box-shadow: 2px 4px 3px rgba(10,10,10,.1);
justify-content: center;
}

.container {
  display: flex;
  justify-content: center;
  align-self: center;
}

/* .card:hover {
  background-color: #8e8e82;
} */

.floating-card {
  background: #dbd6bf;
  width: 0 350px;
  padding: 30px;
  margin: 20px 10%;
  border-radius: 10px;
  box-shadow: 6px 5px 5px rgba(0,0,0,.1);
  margin: auto;
  text-shadow: 3px 5px 5px lightgrey;
  font-weight: 600;
  color:rgba(16, 14, 14, 0.5)
}

.jobs {
  /* justify-content: space-between; */
  margin-left: 50px;
  width: 90wv;
  display: flex;
  /* align-items: center; */
  height: 200px;
}

.pres-card {
  justify-content: center;
  align-items: center;
  width: 90vw;
  overflow: auto;
}

/* .job-card {
  width: 100px;
  padding: 8px 8px;
} */

.sou {
/* left: 10vw; */
/* width: 200px; */
/* align-self: center; */
/* position: absolute; */
background-color: white;
border-radius: 16px;
box-shadow: 6px 5px 5px rgba(0,0,0,.1);
}

.tiu {
/* left: 35vw; */
/* width: 200px; */
/* align-self: center; */
/* position: absolute; */
background-color: white;
border-radius: 16px;
box-shadow: 6px 5px 5px rgba(0,0,0,.1);
}

.psu {
/* left: 60vw; */
/* width: 200px; */
/* align-self: center; */
/* position: absolute; */
background-color: white;
border-radius: 16px;
box-shadow: 6px 5px 5px rgba(0,0,0,.1);
}

.carousel {
  max-width: 800px;
}

.job-card:hover {
  background-color: #f8f5e4;
  box-shadow:  0 3px 3px rgba(200, 193, 193, 0.5);
  z-index: 2;
}


.end {
  align-items: center;
}

